Better structure and boot.
- Moves conf to its own folder.
- Adds bin/logs & bin/pids to .gitignore
- Changes how controllers and models are booted.
  - Controllers and models folder boot themselves (index.js)
  - Controler and model modules should export a constructor function.
- Moves helpers to its own folder.
  - Helper submodules auto-load.
- Adds sample model (Sample.js)
- Adds dependency on underscore module.
  - app.util exposes specific underscore functions
    (In case I want to remove underscore dependency later)
- Updates style.less to import relative to public/css
  (boot.js now hacks express.compilers to fix a bug related to this)

--- a/public/css/colors.less
+++ b/public/css/colors.less
@@ -3,14 +3,14 @@
 //
 
 // Links
-@link: #00B7FF;
+@color-link: #00B7FF;
 
 // Shades of gray.
-@gray90: #f8f8f8;
-@gray80: #f4f4f4;
-@gray70: #eeeeee;
-@gray60: #eaeaea;
-@gray50: #dddddd;
+@color-gray90: #f8f8f8;
+@color-gray80: #f4f4f4;
+@color-gray70: #eeeeee;
+@color-gray60: #eaeaea;
+@color-gray50: #dddddd;
 
 
 
