--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,10 +1,10 @@
-@import "/public/css/mixins.less";
-@import "/public/css/colors.less";
+@import "mixins.less";
+@import "colors.less";
 
 html {
   margin: 0;
   padding: 0;
-  background: @gray80;
+  background: @color-gray80;
 }
 
 body {
@@ -14,10 +14,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   
   background: white;  
-  border: 1px solid @gray60;
+  border: 1px solid @color-gray60;
  .border-radius(10px);
 }
 
 a {
-  color: @link;
+  color: @color-link;
 }
